дальнейшие наработки по лаунчеру