@@ -3,17 +3,13 @@ package com.ss.launcher.ui.page;
 import static javafx.geometry.Pos.TOP_CENTER;
 
 import java.awt.Point;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map.Entry;
 
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
+import javafx.scene.control.Alert;
+import javafx.scene.control.Alert.AlertType;
 import javafx.scene.control.Button;
+import javafx.scene.control.Label;
 import javafx.scene.control.ProgressBar;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
@@ -24,9 +20,12 @@ import javafx.scene.shape.Line;
 import rlib.ui.page.impl.AbstractUIPage;
 import rlib.ui.util.FXUtils;
 import rlib.ui.window.UIWindow;
-import rlib.util.Util;
 
-import com.ss.launcher.Launcher;
+import com.ss.launcher.ExecutorManager;
+import com.ss.launcher.exception.IncorrectJavaException;
+import com.ss.launcher.exception.NotFoundClientException;
+import com.ss.launcher.tasks.UpdateClientTask;
+import com.ss.launcher.util.LauncherUtils;
 
 /**
  * Реализация основной страницы лаунчера.
@@ -41,14 +40,15 @@ public class MainUIPage extends AbstractUIPage {
 
 	private ImageView logoImageView;
 
-	private Button updateClient;
-
+	private Button updateClientButton;
 	private Button playButton;
 
 	private ProgressBar progressBar;
 
+	private Label progressBarStatus;
+
 	@Override
-	public void postPageShow(UIWindow window) {
+	public void postPageShow(final UIWindow window) {
 		super.postPageShow(window);
 
 		window.setSize(1000, 600);
@@ -74,41 +74,70 @@ public class MainUIPage extends AbstractUIPage {
 		progressBar = new ProgressBar(0);
 		progressBar.setId("HangarProgressStrength");
 
-		VBox.setMargin(progressBar, new Insets(10, 0, 0, 0));
+		progressBarStatus = new Label();
+
+		VBox.setMargin(progressBarStatus, new Insets(10, 0, 0, 0));
+
+		FXUtils.addClassTo(progressBarStatus, "arial-label-17");
 
 		FXUtils.setFixedSize(progressBar, new Point(800, 10));
+		FXUtils.addToPane(progressBarStatus, root);
 		FXUtils.addToPane(progressBar, root);
 	}
 
 	protected void createButtons() {
 
-		HBox buttonContainer = new HBox();
+		final HBox buttonContainer = new HBox();
 		buttonContainer.setAlignment(Pos.CENTER);
 
-		updateClient = new Button();
-		updateClient.setText("Проверить обновление");
-		updateClient.setOnAction(event -> processUpdate());
+		updateClientButton = new Button();
+		updateClientButton.setText("Проверить обновление");
+		updateClientButton.setOnAction(event -> processUpdate());
 
 		playButton = new Button();
 		playButton.setText("Играть");
 		playButton.setOnAction(event -> processPlay());
 
-		FXUtils.addClassTo(updateClient, "arial-label-17");
+		FXUtils.addClassTo(updateClientButton, "arial-label-17");
 		FXUtils.addClassTo(playButton, "arial-label-17");
-		FXUtils.setFixedSize(updateClient, new Point(300, 26));
+		FXUtils.setFixedSize(updateClientButton, new Point(300, 26));
 		FXUtils.setFixedSize(playButton, new Point(300, 26));
 
-		FXUtils.addToPane(updateClient, buttonContainer);
+		FXUtils.addToPane(updateClientButton, buttonContainer);
 		FXUtils.addToPane(playButton, buttonContainer);
 		FXUtils.addToPane(buttonContainer, root);
 
 		VBox.setMargin(buttonContainer, new Insets(10, 0, 0, 0));
-		HBox.setMargin(updateClient, new Insets(0, 5, 0, 0));
+		HBox.setMargin(updateClientButton, new Insets(0, 5, 0, 0));
 		HBox.setMargin(playButton, new Insets(0, 0, 0, 5));
+	}
+
+	public Button getPlayButton() {
+		return playButton;
+	}
+
+	public Button getUpdateClientButton() {
+		return updateClientButton;
+	}
+
+	public ProgressBar getProgressBar() {
+		return progressBar;
+	}
+
+	public Label getProgressBarStatus() {
+		return progressBarStatus;
 	}
 
 	private void processUpdate() {
 
+		final Button playButton = getPlayButton();
+		playButton.setDisable(true);
+
+		final Button updateClientButton = getUpdateClientButton();
+		updateClientButton.setDisable(true);
+
+		final ExecutorManager executorManager = ExecutorManager.getInstance();
+		executorManager.async(new UpdateClientTask(this));
 	}
 
 	protected void createLogo() {
@@ -119,60 +148,26 @@ public class MainUIPage extends AbstractUIPage {
 		FXUtils.addToPane(logoImageView, root);
 	}
 
+	/**
+	 * Процесс запуска
+	 */
 	private void processPlay() {
-		processRun();
-	}
-
-	protected void processRun() {
-
-		final Path rootFolder = Util.getRootFolderFromClass(Launcher.class);
-		final Path targetFile = Paths.get(rootFolder.toString(), "game", "spaceshift.jar");
-
-		Path javaFolder = Paths.get(System.getProperty("java.home"), "bin");
-		Path targetJava = javaFolder.resolve("java");
-
-		if(!Files.exists(targetJava)) {
-			targetJava = javaFolder.resolve("java.exe");
-		}
-
-		if(!Files.exists(targetJava)) {
-			javaFolder = Paths.get(System.getProperty("java.home"), "lib");
-			// targetJava = javaFolder.resolve("jexec");
-		}
-
-		if(!Files.exists(targetJava)) {
-			// targetJava = javaFolder.resolve("jexec.exe");
-		}
-
-		// System.out.println("properties: ");
-
-		for(Entry<Object, Object> entry : System.getProperties().entrySet()) {
-			// System.out.println(entry.getKey() + " = " + entry.getValue());
-		}
-
-		String java = Files.exists(targetJava) ? targetJava.toString() : "java";
-
-		List<String> commands = new ArrayList<>();
-		commands.add(java);
-		commands.add("-jar");
-		commands.add("-XX:CompileThreshold=200");
-		commands.add("-XX:+AggressiveOpts");
-		commands.add("-XX:CompileThreshold=200");
-		commands.add("-XX:+UseParallelGC");
-		commands.add("-XX:+UseTLAB");
-		commands.add("-Xmx512m");
-		commands.add(targetFile.toString());
-
-		System.out.println("commands " + commands);
-
-		ProcessBuilder builder = new ProcessBuilder(commands);
-		builder.inheritIO();
 
 		try {
-			final Process process = builder.start();
-			process.waitFor();
-		} catch(IOException | InterruptedException e) {
-			e.printStackTrace();
+			LauncherUtils.runClient();
+		} catch(final NotFoundClientException e) {
+
+			final Alert alert = new Alert(AlertType.INFORMATION);
+			alert.setHeaderText("Не найден клиент, перезапустите лаунчер.");
+			alert.setTitle("Информация");
+			alert.showAndWait();
+
+		} catch(final IncorrectJavaException e) {
+
+			final Alert alert = new Alert(AlertType.ERROR);
+			alert.setHeaderText(e.getMessage());
+			alert.setTitle("Ошибка");
+			alert.showAndWait();
 		}
 	}
 
